create security configuration feature